--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="google-site-verification" content="p-kfFDMaRSmE54psXa6YtGax9xHGS4ybAzhcPD0FRMQ" />
      <title>Tic-Tac-Toe game</title>
      <link rel="stylesheet" href="style.css">
 </head>
