--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="google-site-verification" content="p-kfFDMaRSmE54psXa6YtGax9xHGS4ybAzhcPD0FRMQ" />
+     <meta name="description" content="Play the ultimate Tic Tac Toe game now! Engage in thrilling multiplayer battles or test your skills in challenging single-player mode. Our HTML5, CSS3, and JavaScript powered game offers a mind-bending experience. Start playing for free and conquer the grid!">
+     <meta name="keywords" content="Tic Tac Toe, multiplayer, single player, HTML5, CSS3, JavaScript, free game">
+     <meta name="author" content="Your Name">
      <title>Tic-Tac-Toe game</title>
      <link rel="stylesheet" href="style.css">
 </head>
